# EMS-protocols

./: data.md  gameplay.py  main.py  parser.py  pyproject.toml
models/: state.py
protocols/: CLAUDE.md  __init__.py  __main__.py  base.py  controller.py
protocols/data/: fbao.md
protocols/models/: __init__.py  protocol.py
protocols/screens/: __init__.py  protocol_select.py
screens/: game.py  results.py
