[project]
name = "protocols"
version = "0.1.0"
description = "EMS Protocols Practice Game"
requires-python = ">=3.14"
dependencies = []

[project.scripts]
protocols = "protocols.main:main"

[build-system]
requires = ["uv_build>=0.6.9,<0.7"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = ""
